style: design changes in opertaional cost sector

--- a/web/css/sidebar.css
+++ b/web/css/sidebar.css
@@ -1,6 +1,6 @@
 /* Sidebar */
 .sidebar {
-    background-color: #043d20; 
+    background-color: #23431efc; 
     color: #fff;
     width: 250px;
     height: 100vh;
